<resources>
    <string name="app_name">SocioLoginApp</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="twitter">Twitter</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_with">Sign In With</string>
</resources>