<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_margin="50dp"
        android:gravity="center"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:background="#80ffffff"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="15dp"
        android:importantForAutofill="no"
        android:autofillHints="Enter your email address"
        android:inputType="textEmailAddress"
        tools:ignore="HardcodedText" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#80ffffff"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
        android:drawablePadding="15dp"
        android:autofillHints="Enter password not more than 6 strings" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signinbutton"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:inputType="textPassword"
        tools:ignore="HardcodedText" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgetpw"
        android:layout_below="@+id/signinbutton"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:background="#000000"
        android:layout_margin="-5dp"
        android:layout_alignStart="@id/signinbutton"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signinwith"
        android:text="@string/sign_in_with"
        android:layout_margin="100dp"
        android:background="#000000"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/forgetpw"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/socialicon"
        android:gravity="center"
        android:orientation="horizontal" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/glogo"
                android:layout_below="@id/signinwith"
                android:background="#000000"
                android:src="@drawable/glogo"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/flogo"
                android:layout_below="@id/signinwith"

                android:background="#000000"
                android:layout_alignEnd="@id/signin"
                android:src="@drawable/flogo"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/tlogo"
                android:layout_below="@+id/signinwith"
                android:background="#000000"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tlogo"
                android:contentDescription="@string/twitter"
                tools:ignore="HardcodedText" />



</RelativeLayout>